# nansenscope

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alerts.py  charts.py  config.py  dashboard.py  history.py  nansenscope.py  network.py  perps.py  pyproject.toml  reporter.py  requirements.txt  scanner.py  signals.py
.github/workflows/: test.yml
docs/: DEMO_SCRIPT_V1.md  VIBECODED_PROOF.md  bubble_map.html  dashboard.html  index.html  network_map.html  results.html  vibecoded_proof.sha256
docs/assets/video/: voiceover_live.aiff  voiceover_live.txt  voiceover_v1.aiff  voiceover_v1.m4a  voiceover_v1.txt
examples/: daily_report_example.md  scan_report_example.md
scripts/: demo_v1.sh
skill/: SKILL.md
skill/scripts/: daily_scan.py  portfolio_check.py  watch_scan.py
tests/: test_config.py  test_signals.py
video-remotion/: package-lock.json  package.json
video-remotion/src/: Root.jsx  index.jsx
video-v2/: package-lock.json  package.json
video-v2/public/: vo_auto.m4a  vo_build.m4a  vo_charts.m4a  vo_dash.m4a  vo_intro.m4a  vo_more.m4a  vo_outro.m4a  vo_scan.m4a  vo_signal.m4a  vo_solution.m4a  voiceover.m4a
video-v2/src/: Root.jsx  index.jsx
