[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nansenscope"
version = "0.3.0"
description = "Autonomous Smart Money Intelligence Agent powered by Nansen CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Luigi08001"}]
keywords = ["nansen", "smart-money", "blockchain", "intelligence", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "rich>=13.0",
    "aiohttp>=3.9",
    "plotly>=5.18",
    "kaleido>=0.2.1",
    "networkx>=3.0",
]

[project.scripts]
nansenscope = "nansenscope:main"

[project.urls]
Homepage = "https://github.com/Luigi08001/nansenscope"
Repository = "https://github.com/Luigi08001/nansenscope"

[tool.setuptools]
py-modules = ["nansenscope", "scanner", "signals", "alerts", "charts", "reporter", "config", "network", "perps"]
